--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "json-server-api",
   "version": "1.0.0",
   "scripts": {
-    "start": "json-server --watch db.json --port 10001"
+    "start": "json-server --watch db.json --host 0.0.0.0 --port 10001"
   },
   "dependencies": {
     "json-server": "^0.17.3"
